src/objects/Currency_Director__c.object
<CustomObject>
    <description>Currency Director - Header Object</description>
    <fields>
        <fullName>Director_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Director</relationshipLabel>
        <relationshipName>Currency_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_Currency__c</fullName>
        <label>Director Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_related_currency_Effective_Date__c</fullName>
        <label>Earliest (related currency) Effective Da</label>
        <summarizedField>Currency_Director_Currencies__c.Last_Rate_Update_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Currency_Director_Currencies__c.Is_Currency_Director_Base_Currency__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Currency_Director_Currencies__c.Currency_Director__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_related_currency_Effective_Date__c</fullName>
        <description>Reports back the latest Effective Date on the exchange rates set on all related [Currency Director Currency] masters. This is used for control purposes, and ensures that rates cannot be loaded until they share this date (i.e. the calculated cross rates are based on exchange rates which share the same date).</description>
        <inlineHelpText>This is used for control purposes, and ensures that rates cannot be loaded until they share this date (i.e. the calculated cross rates are based on exchange rates which share the same date).</inlineHelpText>
        <label>Latest (related currency) Effective Date</label>
        <summarizedField>Currency_Director_Currencies__c.Last_Rate_Update_Date__c</summarizedField>
        <summaryForeignKey>Currency_Director_Currencies__c.Currency_Director__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rates_Share_Consistent_Effective_Dates__c</fullName>
        <formula>If(Earliest_related_currency_Effective_Date__c =  Latest_related_currency_Effective_Date__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rates Share Consistent Effective Dates ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Currency Director</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Director Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Director</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>